--- a/M21_Starter_Code/gradio_sms_text_classification.ipynb
+++ b/M21_Starter_Code/gradio_sms_text_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,23 +43,26 @@
     "    The fitted pipeline is returned to make future predictions.\n",
     "    \"\"\"\n",
     "    # Set the features variable to the text message column.\n",
-    "    \n",
+    "    features = sms_text_df['text_message']\n",
     "    # Set the target variable to the \"label\" column.\n",
-    "   \n",
+    "    target = sms_text_df['label']\n",
     "\n",
     "    # Split data into training and testing and set the test_size = 33%\n",
-    "    \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.33, random_state=42)\n",
     "\n",
     "    # Build a pipeline to transform the test set to compare to the training set.\n",
-    "    \n",
-    "\n",
+    "    text_clf = Pipeline([('tfidf', TfidfVectorizer(stop_words='english')),\n",
+    "                     ('clf', LinearSVC()),\n",
+    "    ])\n",
     "    # Fit the model to the transformed training data and return model.\n",
-    "    return "
+    "    text_clf.fit(X_train, y_train)\n",
+    "    return text_clf\n",
+    "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,48 +116,96 @@
        "      <td>ham</td>\n",
        "      <td>Nah I don't think he goes to usf, he lives around here though</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5567</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>This is the 2nd time we have tried 2 contact u. U have won the £750 Pound prize. 2 claim is easy, call 087187272008 NOW1! Only 10p per minute. BT-national-rate.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5568</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Will ü b going to esplanade fr home?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5569</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Pity, * was in mood for that. So...any other suggestions?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5570</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>The guy did some bitching but I acted like i'd be interested in buying something else next week and he gave it to us for free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5571</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Rofl. Its true to its name</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5572 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  label  \\\n",
-       "0   ham   \n",
-       "1   ham   \n",
-       "2  spam   \n",
-       "3   ham   \n",
-       "4   ham   \n",
+       "     label  \\\n",
+       "0      ham   \n",
+       "1      ham   \n",
+       "2     spam   \n",
+       "3      ham   \n",
+       "4      ham   \n",
+       "...    ...   \n",
+       "5567  spam   \n",
+       "5568   ham   \n",
+       "5569   ham   \n",
+       "5570   ham   \n",
+       "5571   ham   \n",
        "\n",
-       "                                                                                                                                                  text_message  \n",
-       "0                                              Go until jurong point, crazy.. Available only in bugis n great world la e buffet... Cine there got amore wat...  \n",
-       "1                                                                                                                                Ok lar... Joking wif u oni...  \n",
-       "2  Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question(std txt rate)T&C's apply 08452810075over18's  \n",
-       "3                                                                                                            U dun say so early hor... U c already then say...  \n",
-       "4                                                                                                Nah I don't think he goes to usf, he lives around here though  "
+       "                                                                                                                                                          text_message  \n",
+       "0                                                      Go until jurong point, crazy.. Available only in bugis n great world la e buffet... Cine there got amore wat...  \n",
+       "1                                                                                                                                        Ok lar... Joking wif u oni...  \n",
+       "2          Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question(std txt rate)T&C's apply 08452810075over18's  \n",
+       "3                                                                                                                    U dun say so early hor... U c already then say...  \n",
+       "4                                                                                                        Nah I don't think he goes to usf, he lives around here though  \n",
+       "...                                                                                                                                                                ...  \n",
+       "5567  This is the 2nd time we have tried 2 contact u. U have won the £750 Pound prize. 2 claim is easy, call 087187272008 NOW1! Only 10p per minute. BT-national-rate.  \n",
+       "5568                                                                                                                              Will ü b going to esplanade fr home?  \n",
+       "5569                                                                                                         Pity, * was in mood for that. So...any other suggestions?  \n",
+       "5570                                     The guy did some bitching but I acted like i'd be interested in buying something else next week and he gave it to us for free  \n",
+       "5571                                                                                                                                        Rofl. Its true to its name  \n",
+       "\n",
+       "[5572 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load the dataset into a DataFrame\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Call the sms_classification function with the DataFrame and set the result to the \"text_clf\" variable\n",
-    "text_clf = "
+    "# Load the dataset into a DataFrame\n",
+    "sms_text_df = pd.read_csv(\"Resources/SMSSpamCollection.csv\")\n",
+    "\n",
+    "sms_text_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call the sms_classification function with the DataFrame and set the result to the \"text_clf\" variable\n",
+    "text_clf = sms_classification(sms_text_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,22 +226,26 @@
     "    classified as spam or not.\n",
     "    \"\"\"\n",
     "    # Create a variable that will hold the prediction of a new text.\n",
-    "    \n",
+    "    prediction = text_clf.predict([text])[0]\n",
     "    # Using a conditional if the prediction is \"ham\" return the message:\n",
     "    # f'The text message: \"{text}\", is not spam.' Else, return f'The text message: \"{text}\", is spam.'\n",
+    "    if prediction == \"ham\":\n",
+    "        return f'The text message: \"{text}\", is not spam.'\n",
+    "    else:\n",
+    "        return f'The text message: \"{text}\", is spam.'\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
+      "* Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -208,20 +263,54 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rerunning server... use `close()` to stop if you need to change `launch()` parameters.\n",
+      "----\n",
+      "* Running on public URL: https://4bc3c8c51516322ba4.gradio.live\n",
+      "\n",
+      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": []
+      "text/html": [
+       "<div><iframe src=\"https://4bc3c8c51516322ba4.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Create a sms_app that takes a textbox for the inputs and has a textbox for the output.  \n",
     "# Povide labels for each textbox. \n",
+    "# Define the Gradio interface function\n",
+    "# Define the Gradio interface function\n",
+    "def sms_app():\n",
+    "    \"\"\"\n",
+    "    Gradio interface for SMS spam classification.\n",
+    "    \"\"\"\n",
+    "# Create the Gradio Interface\n",
+    "iface = gr.Interface(\n",
+    "    fn=sms_prediction,\n",
+    "    inputs=gr.Textbox(lines=2, placeholder=\"Enter your SMS text here...\", label=\"Input SMS Message\"),\n",
+    "    outputs=gr.Textbox(label=\"Classification Result\"),\n",
+    "    title=\"SMS Spam Classifier\",\n",
+    "    description=\"Enter an SMS message to determine if it's spam or not.\"\n",
+    ")\n",
     "\n",
+    "iface.launch()\n",
     "    \n",
-    "# Launch the app.\n"
+    "# Launch the app.\n",
+    "iface.launch(share=True)\n",
+    "\n",
+    "# Run the app\n",
+    "sms_app()"
    ]
   },
   {
@@ -236,6 +325,36 @@
     "2. You won 2 free tickets to the Super Bowl.\n",
     "3. You won 2 free tickets to the Super Bowl text us to claim your prize.\n",
     "4. Thanks for registering. Text 4343 to receive free updates on medicare."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The text message: \"You are a lucky winner of $5000!\", is not spam.\n",
+      "The text message: \"You won 2 free tickets to the Super Bowl.\", is not spam.\n",
+      "The text message: \"You won 2 free tickets to the Super Bowl text us to claim your prize.\", is spam.\n",
+      "The text message: \"Thanks for registering. Text 4343 to receive free updates on medicare.\", is spam.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of test messages\n",
+    "test_messages = [\n",
+    "    \"You are a lucky winner of $5000!\",\n",
+    "    \"You won 2 free tickets to the Super Bowl.\",\n",
+    "    \"You won 2 free tickets to the Super Bowl text us to claim your prize.\",\n",
+    "    \"Thanks for registering. Text 4343 to receive free updates on medicare.\"\n",
+    "]\n",
+    "\n",
+    "# Test each message and print the result\n",
+    "for message in test_messages:\n",
+    "    print(sms_prediction(message))"
    ]
   },
   {
@@ -262,9 +381,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
